Added sonatype parent to pom, added some debug scripts, tweaks.